src/scss/components/modal/layout.scss
.modal {
  overflow: auto;
  padding: 50px 0 10px;

  &.modal-vertically-responsive {
    padding-top: 50px;
    padding-bottom: 50px;

    .modal-content {
      height: 100%;
    }

    .modal-body {
      height: -webkit-calc(100% - 138px);
      height: calc(100% - 138px);
      overflow: hidden !important;
      overflow-y: auto !important;

      &:before {
        content: '';
        position: absolute;
        left: 0;
        right: 0;
        background-color: #fff;
        height: 7px;
      }
    }
  }
}

.modal-backdrop {
  background-color: rgba(255, 255, 255, 0.88);
}

.modal-dialog {
  height: 100%;

  &:not(.modal-lg) {
    max-width: 600px;
  }
}

.modal-vertically-responsive .modal-dialog {
  height: -webkit-calc(100% - 40px);
  height: calc(100% - 40px);
}

.modal-form {
  height: 100%;
}

.modal-content {
  -webkit-animation: fade-in 0.25s ease-in-out;
  animation: fade-in 0.25s ease-in-out;
  background-color: #fff;
  border-radius: 16px;
  margin: 0 auto;
  position: relative;
  width: 100%;
  box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
  border: none;
}

.modal-header {
  display: block;
  color: #0C0D0D;
  font-size: 23px;
  font-weight: 600;
  padding: 24px;
  position: relative;
  text-align: center;
  background: #fff;
  border-radius: 16px 16px 0 0;
  border-bottom: none;
  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.08);
  word-wrap: break-word;
  z-index: 1;

  &.modal-slim-header {
    border: none;
    box-shadow: none;
  }

  .scrollable-tabs {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 24px -24px -24px;

    .tabs {
      border-bottom: none;
    }
  }

  &:not(.modal-slim-header) + .modal-body {
    padding-top: 30px;
  }

  + .modal-body {
    border-radius: 0 !important;
  }
}

.modal-body,
.modal-subheader {
  font-size: 13px;
  font-weight: 400;
  position: relative;
  color: #696E6F;
}

.modal-body,
.modal-footer {
  background-color: #fff;
  border-radius: 0 0 16px 16px;
}

.modal-body {
  border-radius: 16px;

  .settings-content-table {
    margin: -25px -30px;

    .settings-content-table-rows {
      overflow-y: unset;
      max-height: unset;
    }
  }
}

.modal-subheader {
  padding-top: 8px;
  text-align: left;
}

.modal-explanation {
  margin-bottom: 20px;
}

.modal-spinner-container {
  text-align: center;
  width: 100%;
}

.modal-spinner .circle-spinner {
  display: inline-block;
  fill: #0d94f6;
  height: 64px;
  width: 64px;
}

.modal-body {
  padding: 0 30px 30px;
  overflow: visible;
}

.modal-footer {
  box-shadow: 0 0 30px rgba(0, 0, 0, 0.25), inset 0 2px 5px 0 rgba(0, 0, 0, 0.08);
  border-top: none;
  padding: 0;
  font-size: 0;
  text-align: right;
  display: block;

  &:after {
    clear: both;
    content: '';
    display: block;
  }

/*
  &.modal-slim-footer {
    border: none;
  }
*/

  .btn {
    height: 56px;
    margin: 0;
    border-radius: 0;

    &:first-child {
      border-radius: 0 0  0 16px;

      &:nth-last-child(1) {
        width: 100%;
      }

      &:nth-last-child(2),
      &:nth-last-child(2) ~ .btn {
        width: 50%;
      }

      &:nth-last-child(3),
      &:nth-last-child(3) ~ .btn {
        width: 33.33333%;
      }

      &:nth-last-child(4),
      &:nth-last-child(4) ~ .btn {
        width: 25%;
      }

      &:nth-last-child(5),
      &:nth-last-child(5) ~ .btn {
        width: 20%;
      }
    }

    &:last-child {
      border-radius: 0 0 16px 0;
    }
  }
}

.modal-corner {
  right: 10px;
  position: absolute;
  top: 10px;
  color: #696E6F;
  height: 30px;
  width: 30px;
  line-height: 40px;
  text-align: center;

  &:active {
    background: #EAF0F2;
    border-radius: 50%;
  }

  > .button-close {
    display: inline-block;
    outline: 0;
    position: relative;
    top: -2px;
    white-space: nowrap;
    color: inherit;
    font-size: 20px;
    font-weight: 400;
    line-height: 16px;
  }
}

